fix some bugs and improve responsive and design

--- a/src/Components/Pages/Invoice/Invoice.css
+++ b/src/Components/Pages/Invoice/Invoice.css
@@ -6,17 +6,23 @@
     display: none;
 }
 
-.side-nav {
+/* .side-nav {
     display: block;
+    position: relative;
 }
 
 .header {
     display: block;
-}
+} */
 
-/*------------------------------------
-            Print Function
-------------------------------------*/
+
+
+
+/*------------------------------------------------
+                Print Function
+------------------------------------------------*/
+
+
 
 
 @media print {
