--- a/src/Components/Pages/Invoice/Invoice.css
+++ b/src/Components/Pages/Invoice/Invoice.css
@@ -1,30 +1,3 @@
-.display-invoice {
-    display: block;
-}
-
-.print-invoice {
-    display: none;
-}
-
-/* .side-nav {
-    display: block;
-    position: relative;
-}
-
-.header {
-    display: block;
-} */
-
-
-
-
-/*------------------------------------------------
-                Print Function
-------------------------------------------------*/
-
-
-
-
 @media print {
     * {
         overflow: visible !important;
@@ -34,26 +7,24 @@
         background-color: white;
     }
 
-    .display-invoice {
-        display: none;
-    }
-
     ::-webkit-scrollbar {
         width: 0;
         display: none;
     }
 
-    .print-invoice {
+    .invoice {
         display: block;
         height: 100vh;
         width: 100vw;
+        margin: 0%;
+        padding: 0%;
     }
 
-    .side-nav {
-        display: none;
-    }
-
-    .header {
+    .side-nav,
+    .header,
+    .display-invoice,
+    .invoice-head,
+    .invoice-btn {
         display: none;
     }
 }
